syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared.Apps";

service Apps {
  rpc ListApps (google.protobuf.Empty) returns (AppListReply);
  rpc CreateLdapCredential (CreateLdapCredentialRequest) returns 
  (CreateLdapCredentialReply);
  rpc GetAppDetails (GetAppDetailsRequest) returns (GetAppDetailsReply);
}

message GetAppDetailsRequest {
  string id = 1;
}

message GetAppDetailsReply {
  string id = 1;
  string name = 2;
  bool has_ldap_auth = 3;
  google.protobuf.StringValue login_url = 4;
  google.protobuf.StringValue description = 5;

  message UrlAuthSetting {
    string url = 1;
  }
}

message CreateLdapCredentialRequest {
  string id = 1;
}

message CreateLdapCredentialReply {
  string password = 1;
}

message AppListReply {
  repeated AppListEntry apps = 1;
}

message AppListEntry {
  string id = 1;
  string name = 2;
  string description = 3;
}
