syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared.Admin";

service AdminApps {
  rpc ListApps (google.protobuf.Empty) returns (AppListReply);
  rpc GetAppDetails (AppDetailRequest) returns (AppDetailReply);
  rpc AddNewApp (AddNewAppRequest) returns (AddNewAppReply);
  rpc AddGroupToApp (AddGroupToAppRequest) returns (AddGroupToAppReply); 
  rpc RemoveGroupFromApp (RemoveGroupFromAppRequest) returns
  (RemoveGroupFromAppReply);
  rpc TriggerScimSync(ScimSyncRequest) returns (google.protobuf.Empty);
  rpc SaveGatekeeperProxySettings(GatekeeperProxySettingsRequest) returns (GatekeeperProxySettingsReply); 
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppReply);
  rpc SaveAppInformation(SaveAppInformationRequest) returns (SaveAppInformationReply);
}

message SaveAppInformationRequest {
  string name = 1;
  string description = 2;
  google.protobuf.StringValue url = 3;
  string app_id = 4;
}

message SaveAppInformationReply {
  bool success = 1;
}

message DeleteAppRequest {
  string app_id = 1;
}

message DeleteAppReply {
  bool success = 1;
}

message GatekeeperProxySettingsRequest {
  string app_id = 1;
  string internal_hostname = 2;
  string public_hostname = 3;
  repeated string public_endpoints = 4;
}

message GatekeeperProxySettingsReply {}

message ScimSyncRequest {
  string app_id = 1;
}

message AddGroupToAppRequest {
  string group_id = 1;
  string app_id = 2;
}

message AddGroupToAppReply {
  bool success = 1;
}

message RemoveGroupFromAppRequest {
  string group_id = 1;
  string app_id = 2;
}

message RemoveGroupFromAppReply {
  bool success = 1;
}

enum HostingType
{
  UNKNOWN_HOSTING_TYPE = 0;
  WEB_GENERIC = 1;
  WEB_GATEKEEPER_PROXY = 2;
  NON_WEB = 3;
}

message AddNewAppRequest {
  string name = 1;
  AuthChoice auth_choice = 2;
  DirectoryChoice directory_choice = 3;

  oneof auth_setting {
    OIDCSetting oidc_setting = 4;
    ProxySetting proxy_setting = 5;
  }

  SCIMSetting scim_setting = 6;
  repeated string group_ids = 7;
  HostingType hosting_type = 8;
  string description = 9;
  google.protobuf.StringValue url = 10;

  message OIDCSetting {
    string redirect_uri = 1;
  }

  message ProxySetting {
    string public_hostname = 1;
    string internal_hostname = 2;
  }

  message SCIMSetting {
    string endpoint = 1;
    string credentials = 2;
  }

  enum AuthChoice {
    UNKNOWN_AUTH = 0;
    LDAP_AUTH = 1;
    OIDC_AUTH = 2;
    NO_AUTH = 3;
  }

  enum DirectoryChoice {
    NONE_DIRECTORY = 0;
    LDAP_DIRECTORY = 1;
    SCIM_DIRECTORY = 2;
  }
}

message AddNewAppReply {
  bool success = 1;
}

message AppListReply {
  repeated AppListEntry apps = 1;
}

message AppListEntry {
  string id = 1;
  string name = 2;
  HostingType hosting_type = 3;
  int32 groups_assigned = 4;
}

message AppDetailRequest {
  string id = 1;
}

message AppDetailReply {
  string id = 1;
  string name = 2;
  repeated GrantedAppGroup groups = 3;
  HostingType hosting_type = 4;
  ProxyAuthSetting proxy_auth_setting = 5;

  oneof auth_setting {
    OidcAuthSetting oidc_auth_setting = 6;
    LdapAuthSetting ldap_auth_setting = 7; 
  }

  oneof directory_setting {
    LdapDirectorySetting ldap_directory_setting = 8;
    ScimDirectorySetting scim_directory_setting = 9;
  }

  string description = 10;
  google.protobuf.StringValue url = 11;

  message OidcAuthSetting {
    string client_id = 1;
    string client_secret = 2;
    string redirect_uri = 3;
  }

  message ProxyAuthSetting {
    string internal_hostname = 1;
    string public_hostname = 2;
    repeated string public_endpoints = 3;
  }

  message LdapAuthSetting {
    string base_dn = 1;
  }

  message LdapDirectorySetting {
    string base_dn = 1;
    string username = 2;
    string password = 3;
  }

  message ScimDirectorySetting {
    string endpoint = 1;
    string credentials = 2;
  }
}

message GrantedAppGroup {
  string id = 1;
  string name = 2;
}
