syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared";

service Auth {
  rpc WhoAmI (google.protobuf.Empty) returns (WhoAmIReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailReply);
  rpc VerifyAuthenticatorToken (VerifyAuthenticatorTokenRequest) returns (VerifyAuthenticatorReply);
}

message WhoAmIReply {
  bool isAuthenticated = 1;
  google.protobuf.StringValue userId = 2;
  bool is_installed = 3;
}

message LoginRequest {
  string userId = 1;
  string password = 2;
}

message LoginReply {
  LoginStateEnum state = 1;
}

enum LoginStateEnum {
  failed = 0;
  success = 1;
  twoFactorRequired = 2;
  blocked = 3;
}

message VerifyEmailRequest {
  string userId = 1;
  string code = 2;
}

message VerifyEmailReply {
  bool success = 1;
}

message VerifyAuthenticatorTokenRequest {
  string token = 1;
}

message VerifyAuthenticatorReply {
  bool success = 1;
}